EEVEE-Next: Large objects crash light cache baking #121916

Closed
opened 2024-05-17 14:49:19 +02:00 by Zsolt Stefan · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.93

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-12 20:29, hash: 4a1597e39adb
Worked: Eevee Legacy 4.1.1

Short description of error
Volume light probe rendering slows to a crawl if there is a large object visible in the scene. Even larger objects have a higher performance impact, including crashing Blender consistently.

Exact steps for others to reproduce the error

  • Load example BLEND file.
  • Switch to render view, Eevee Next
  • Select Volume, go to Object Data Properties and delete the light cache
  • Bake the light cache. The resolution is set to very low (2x2x2) for testing purposes, but Blender should handle much higher resolutions.
  • Turn on the collection with the smallest ground plane, and re-bake the light cache.
  • Repeat with the next size up, until Blender crashes. For me it's at the 200 meter plane.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Super/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 516.93 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-05-12 20:29, hash: `4a1597e39adb` Worked: Eevee Legacy 4.1.1 **Short description of error** Volume light probe rendering slows to a crawl if there is a large object visible in the scene. Even larger objects have a higher performance impact, including crashing Blender consistently. **Exact steps for others to reproduce the error** - Load example BLEND file. - Switch to render view, Eevee Next - Select Volume, go to Object Data Properties and delete the light cache - Bake the light cache. The resolution is set to very low (2x2x2) for testing purposes, but Blender should handle much higher resolutions. - Turn on the collection with the smallest ground plane, and re-bake the light cache. - Repeat with the next size up, until Blender crashes. For me it's at the 200 meter plane.
Zsolt Stefan added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2024-05-17 14:49:20 +02:00
Member

Hi, thanks for the report. Can confirm the crash though logs are not generated. In debug build, process terminated with the error in nvoglv64.dll

I noticed high GPU usage so crash is likely related to GPU (out of memory?)

Will defer this to EEVEE devs for further investigation.

Hi, thanks for the report. Can confirm the crash though logs are not generated. In debug build, process terminated with the error in nvoglv64.dll I noticed high GPU usage so crash is likely related to GPU (out of memory?) Will defer this to EEVEE devs for further investigation.

So the new system is creating a surfel representation of the scene inside and around the volume probe. The surfel density is fixed which can increase the memory consumption drastically even for simple scene.

So I see a few improvement that can be done here:

  • add some prints to the console so that there is some feedback about how much memory the system tries to allocate.
  • add UI feedback that the baking failed because of memory consumption.
  • try to bail early if trying to allocate ~80% of the total VRAM. Might already prevent some crashes.
  • Reduce the default distance as it might be too big for the current system as it is.

We might want to work on reducing the memory consumption of the system in the future but I would say it is too late to add these for the initial release.

So the new system is creating a surfel representation of the scene inside and around the volume probe. The surfel density is fixed which can increase the memory consumption drastically even for simple scene. So I see a few improvement that can be done here: - add some prints to the console so that there is some feedback about how much memory the system tries to allocate. - add UI feedback that the baking failed because of memory consumption. - try to bail early if trying to allocate ~80% of the total VRAM. Might already prevent some crashes. - Reduce the default distance as it might be too big for the current system as it is. We might want to work on reducing the memory consumption of the system in the future but I would say it is too late to add these for the initial release.
Clément Foucault changed title from Large objects crash light cache baking (Eevee Next) to EEVEE-Next: Large objects crash light cache baking 2024-05-18 17:20:56 +02:00
Clément Foucault added
Status
Confirmed
and removed
Status
Needs Info from Developers
labels 2024-05-18 17:21:09 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-31 22:55:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121916
No description provided.