EEVEE-Next: LightProbe Bake: Add better feedback when allocation fail

- Add a report to explain why allocation fails and display
  the current limit.
- Add heuristic to avoid out of memory issue.
- Remove the delay property that did not do anything
  right now.
- Reduce default clip end by half.

Fix #121916

Pull Request: https://projects.blender.org/blender/blender/pulls/122572