source/blender/editors/render/render_shading.cc
@@ -1590,6 +1590,15 @@ static blender::Vector<Object *> lightprobe_cache_irradiance_volume_subset_get(b
   return probes;
 }
 
+struct BakeOperatorData {
+  /* Store actual owner of job, so modal operator could check for it,
+   * the reason of this is that active scene could change when rendering
+   * several layers from compositor #31800. */
+  Scene *scene;
+
+  std::string report;
+};
+
 static int lightprobe_cache_bake_invoke(bContext *C, wmOperator *op, const wmEvent * /*event*/)
 {
   wmWindowManager *wm = CTX_wm_manager(C);
@@ -1597,7 +1606,6 @@ static int lightprobe_cache_bake_invoke(bContext *C, wmOperator *op, const wmEve
   ViewLayer *view_layer = CTX_data_view_layer(C);
   Main *bmain = CTX_data_main(C);
   Scene *scene = CTX_data_scene(C);
-  int delay = RNA_int_get(op->ptr, "delay");
 
   blender::Vector<Object *> probes = lightprobe_cache_irradiance_volume_subset_get(C, op);
 
@@ -1605,15 +1613,16 @@ static int lightprobe_cache_bake_invoke(bContext *C, wmOperator *op, const wmEve
     return OPERATOR_CANCELLED;
   }
 
+  BakeOperatorData *data = MEM_new<BakeOperatorData>(__func__);
+  data->scene = scene;
+  data->report = "";
+
   wmJob *wm_job = EEVEE_NEXT_lightbake_job_create(
-      wm, win, bmain, view_layer, scene, probes, scene->r.cfra, delay);
+      wm, win, bmain, view_layer, scene, probes, data->report, scene->r.cfra, 0);
 
   WM_event_add_modal_handler(C, op);
 
-  /* Store actual owner of job, so modal operator could check for it,
-   * the reason of this is that active scene could change when rendering
-   * several layers from compositor #31800. */
-  op->customdata = scene;
+  op->customdata = static_cast<void *>(data);
 
   WM_jobs_start(wm, wm_job);
 
@@ -1624,10 +1633,20 @@ static int lightprobe_cache_bake_invoke(bContext *C, wmOperator *op, const wmEve
 
 static int lightprobe_cache_bake_modal(bContext *C, wmOperator *op, const wmEvent *event)
 {
-  Scene *scene = (Scene *)op->customdata;
+  BakeOperatorData *data = static_cast<BakeOperatorData *>(op->customdata);
+  Scene *scene = data->scene;
 
   /* No running bake, remove handler and pass through. */
   if (0 == WM_jobs_test(CTX_wm_manager(C), scene, WM_JOB_TYPE_LIGHT_BAKE)) {
+    std::string report = data->report;
+
+    MEM_delete(data);
+    op->customdata = nullptr;
+
+    if (!report.empty()) {
+      BKE_report(op->reports, RPT_ERROR, report.c_str());
+      return OPERATOR_CANCELLED;
+    }
     return OPERATOR_FINISHED | OPERATOR_PASS_THROUGH;
   }
 
@@ -1642,7 +1661,7 @@ static int lightprobe_cache_bake_modal(bContext *C, wmOperator *op, const wmEven
 static void lightprobe_cache_bake_cancel(bContext *C, wmOperator *op)
 {
   wmWindowManager *wm = CTX_wm_manager(C);
-  Scene *scene = (Scene *)op->customdata;
+  Scene *scene = static_cast<BakeOperatorData *>(op->customdata)->scene;
 
   /* Kill on cancel, because job is using op->reports. */
   WM_jobs_kill_type(wm, scene, WM_JOB_TYPE_LIGHT_BAKE);
@@ -1659,14 +1678,20 @@ static int lightprobe_cache_bake_exec(bContext *C, wmOperator *op)
 
   blender::Vector<Object *> probes = lightprobe_cache_irradiance_volume_subset_get(C, op);
 
-  /* TODO: abort if selected engine is not eevee. */
-  void *rj = EEVEE_NEXT_lightbake_job_data_alloc(bmain, view_layer, scene, probes, scene->r.cfra);
+  std::string report;
+  void *rj = EEVEE_NEXT_lightbake_job_data_alloc(
+      bmain, view_layer, scene, probes, report, scene->r.cfra);
   /* Do the job. */
   wmJobWorkerStatus worker_status = {};
   EEVEE_NEXT_lightbake_job(rj, &worker_status);
   /* Move baking data to original object and then free it. */
   EEVEE_NEXT_lightbake_update(rj);
   EEVEE_NEXT_lightbake_job_data_free(rj);
+
+  if (!report.empty()) {
+    BKE_report(op->reports, RPT_ERROR, report.c_str());
+    return OPERATOR_CANCELLED;
+  }
 
   return OPERATOR_FINISHED;
 }
@@ -1698,17 +1723,6 @@ void OBJECT_OT_lightprobe_cache_bake(wmOperatorType *ot)
   ot->modal = lightprobe_cache_bake_modal;
   ot->cancel = lightprobe_cache_bake_cancel;
   ot->exec = lightprobe_cache_bake_exec;
-
-  ot->prop = RNA_def_int(ot->srna,
-                         "delay",
-                         0,
-                         0,
-                         2000,
-                         "Delay",
-                         "Delay in millisecond before baking starts",
-                         0,
-                         2000);
-  RNA_def_property_flag(ot->prop, PROP_SKIP_SAVE);
 
   ot->prop = RNA_def_enum(
       ot->srna, "subset", light_cache_subset_items, 0, "Subset", "Subset of probes to update");
